--- a/custom.css
+++ b/custom.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Arsenal:ital,wght@0,400;0,700;1,400&family=Open+Sans:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arya&display=swap');
 
 /* WORKING COPY VANILLA CSS */
 
@@ -12,6 +13,10 @@ body {
     line-height: 1.8;
     color: #374B54;
 }
+.arya {
+  font-family:'arya', sans-serif;
+  font-style: initial;
+}
 a {
   text-decoration: none;
   color:inherit;
@@ -24,6 +29,7 @@ h1 {
   text-shadow: 3px 3px 6px #00000046;
 }
 h2 {
+  margin:0;
   font-family:'arsenal', sans-serif;
   font-weight:400;
   font-size:48px;
@@ -32,6 +38,10 @@ h3 {
   font-family:'arsenal', sans-serif;
   font-weight:400;
   font-size:36px;
+  margin:0;
+}
+.red {
+  color:#7C1A16;
 }
 
 /* Header styles */
@@ -52,6 +62,9 @@ h3 {
   margin-right:auto;
   margin-top:42px;
 }
+.site-branding {
+  margin-top: -15px;
+}
 .logo {
   width: 319px;
   display: block;
@@ -68,11 +81,22 @@ h3 {
   font-size:18px;
   letter-spacing: 1.8px;
 }
-.menu-item {
+#primary-menu .menu-item {
   padding:0 20px;
   color:#fff;
   text-transform: uppercase;
   border-right: 1px solid #AFABA3;
+}
+#social .menu-item {
+  padding-right:12px;
+  color:#fff;
+}
+#primary-menu .social-primary {
+  border: none !important;
+    padding: 0 5px !important;
+}
+#menu-item-110 {
+  margin-left:20px;
 }
 
 /* Hero styles */
@@ -125,14 +149,27 @@ opacity: 0.8;
   display:grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-row-gap:10px;
-    grid-column-gap: 50px;
+    grid-column-gap: 100px;
     max-width:1380px;
     margin-left: auto;
     margin-right: auto;
     padding: 10px;
+    margin-top:20px;
 }
 .column {
   text-align:left;
+}
+.column-title {
+position: relative;
+}
+.about-icon {
+  width:55px;
+  margin:0;
+  position: absolute;
+  top:12px;
+}
+.column-title h3 {
+  margin-left:75px;
 }
 
 /* Welcome bar */
@@ -147,34 +184,182 @@ opacity: 0.8;
   font-style: italic;
 }
 /* Attorneys styles */
+#attorneys {
+  padding:50px 0;
+}
 .team-row {
   display:grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 3fr;
   grid-row-gap:10px;
-    grid-column-gap: 50px;
+    grid-column-gap: 100px;
     max-width:1380px;
     margin-left: auto;
     margin-right: auto;
-    padding: 90px 0;
+    padding: 50px 0;
 }
-.team-image {
+.team-bg {
   background:#374B54;
+  /* height:638px; */
+  width:314px;
+  padding:50px 0;
+}
+.team-info {
+  text-align: center;
+  color:#fff;
+}
+.team-info p {
+  margin:0;
+}
+.headshot {
+  max-width:291px;
+  box-shadow: 4px 4px 0px #0000001A;
+border: 2px solid #FFFFFF;
+margin-left:50px;
+margin-bottom:30px;
 }
 .team-content {
-
+  margin-top:45px;
 }
 .team-content h3 {
   color:#7C1A16;
 }
 
+/* Accordion (testing) */
+.bio-accordion {
+  padding-top:30px;
+  
+}
+.accordion {
+  background-color: #fff;
+  color: #374B54;
+  font-family:'arsenal', sans-serif;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding: 15px;
+  width: 90%;
+  border-top: none;
+  border-bottom: 2px solid #cfcdc8;
+  border-right:none;
+  border-left:none;
+  text-align: left;
+  outline: none;
+  font-size: 22px;
+  transition: 0.4s;
+  position: relative;
+}
+.first {
+  border-top: 2px solid #cfcdc8;
+}
+
+.active {
+  border-top: 1px solid #cfcdc8;
+  border-bottom: none;
+}
+.accordion i {
+  position:absolute;
+  top:20px;
+  right:20px;
+}
+/* .accordion:after {
+  content: '\f067'; 
+  font-size: 13px;
+  font-family: 'FontAwesome';
+  font-weight: lighter;
+  color: #7C1A16;
+  float: right;
+  margin-left: 5px;
+} */
+
+/* .active:after {
+  content: "\2796"; 
+} */
+.panel {
+  padding: 0 18px;
+  width:90%;
+  display: none;
+  background-color: white;
+  overflow: hidden;
+}
+/* .panel ul {
+  list-style-type:none;
+}
+.panel ul li:before {
+  font-family: "Font Awesome";
+  content: "\f105";
+  padding-right:15px;
+} */
+
+/* Practice Areas */
+#practice-areas {
+  text-align: center;
+  background: url("../assets/SP_Pattern_LightTan.png") 0% 0% repeat;
+  padding:80px 0;
+}
+.column ul {
+  list-style-image: url('../assets/SP_PracticeArea_Checkmark.svg');
+}
+::marker {
+  font-size:25px;
+}
+
+
+/* Cases slider styles */
+.cases-inner {
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  grid-row-gap:10px;
+    grid-column-gap: 100px;
+    max-width:1380px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 90px 0;
+}
+.cases-title {
+  border-right: 2px solid #CFCDC8;
+  padding:0 50px;
+  align-items: top;
+}
+
 /* Footer styles */
+
+.contact-inner {
+  display:grid;
+  grid-template-columns: 2fr 1fr;
+  grid-row-gap:10px;
+    grid-column-gap: 100px;
+    max-width:1380px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 90px 0;
+}
+.footer-logo {
+  max-width:349px;
+}
+.email-form h4 {
+  font-size:24px;
+  text-transform: default;
+  font-weight:400;
+  font-style: italic;
+}
+.tan {
+  color:#AFABA3;
+}
+.contact-text {
+  font-size: 18px;
+    letter-spacing: 0px;
+  text-align: left;
+  border-left: 2px solid #AFABA3;
+  padding-left:50px;
+}
 .site-footer {
-  background: #2A3A42;
-  padding:15px;
+  background: url("../assets/SP_Pattern_Blue.png") 0% 0% repeat;
   color:#fff;
   font-family:'arsenal', sans-serif;
   font-size:12px;
   text-align:center;
   letter-spacing: 1.8px;
-  text-transform: uppercase;
+}
+.site-info {
+  background: #2A3A42;
+  padding:15px;
 }
