--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ h3 {
   margin-left: auto;
   margin-right: auto;
   margin-top: 42px;
+  padding: 0 30px;
 }
 .site-branding {
   margin-top: -15px;
@@ -119,9 +120,13 @@ h3 {
   font-size: 18px;
   letter-spacing: 1.8px;
 }
+.mobile-nav {
+  display: none;
+  margin: 0 auto;
+}
 #primary-menu .menu-item {
   padding: 0 20px;
-  color: #fff;
+  color: #ffffff;
   text-transform: uppercase;
   border-right: 1px solid #AFABA3;
 }
@@ -131,8 +136,9 @@ h3 {
 }
 #social .menu-item {
   padding-right: 12px;
-  color: #fff;
+  color: #ffffff;
 }
+#menu-item-89,
 #menu-item-110 {
   margin-left: 20px;
 }
@@ -155,7 +161,7 @@ h3 {
   margin: 0;
   position: absolute;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
   margin-left: auto;
   padding-top: 290px;
   width: 100%;
@@ -167,6 +173,13 @@ h3 {
   margin-right: auto;
   max-width: 884px;
 }
+.line {
+  position: absolute;
+  right: 50%;
+  bottom: -40px;
+  height: 80px;
+  border-left: 3px solid #7C1A16;
+}
 /* About styles */
 #about {
   color: #374B54;
@@ -175,7 +188,7 @@ h3 {
   background: #F2F1F0;
   text-align: center;
   padding: 90px 0;
-  border-bottom: 3px solid #fff;
+  border-bottom: 3px solid #ffffff;
 }
 .about-container h2 {
   margin: 0;
@@ -184,11 +197,11 @@ h3 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-row-gap: 10px;
-  grid-column-gap: 100px;
+  grid-column-gap: 80px;
   max-width: 1380px;
   margin-left: auto;
   margin-right: auto;
-  padding: 10px;
+  padding: 10px 30px;
   margin-top: 20px;
 }
 .column {
@@ -216,7 +229,7 @@ h3 {
 }
 .welcome h3 {
   margin: 0;
-  color: #fff;
+  color: #ffffff;
   font-style: italic;
 }
 /* Attorneys styles */
@@ -240,7 +253,7 @@ h3 {
 }
 .team-info {
   text-align: center;
-  color: #fff;
+  color: #ffffff;
 }
 .team-info p {
   margin: 0;
@@ -248,7 +261,7 @@ h3 {
 .headshot {
   max-width: 291px;
   box-shadow: 4px 4px 0px #0000001A;
-  border: 2px solid #FFFFFF;
+  border: 2px solid #ffffff;
   margin-left: 50px;
   margin-bottom: 30px;
 }
@@ -262,7 +275,7 @@ h3 {
   padding-top: 30px;
 }
 .accordion {
-  background-color: #fff;
+  background-color: #ffffff;
   color: #374B54;
   font-family: 'arsenal', sans-serif;
   text-transform: uppercase;
@@ -323,7 +336,7 @@ h3 {
   padding: 90px 0;
 }
 .cases-title {
-  border-right: 2px solid #CFCDC8;
+  border-right: 2px solid #cfcdc8;
   padding: 0 50px;
   align-items: top;
 }
@@ -395,7 +408,7 @@ select:focus {
 }
 .gform_wrapper .gform_footer input.button {
   background: #2A3A42;
-  color: #fff;
+  color: #ffffff;
   position: absolute;
   top: -50px !important;
   right: 10px !important;
@@ -404,7 +417,7 @@ select:focus {
 }
 .gform_wrapper .gform_footer input[type=submit] {
   background: #2A3A42;
-  color: #fff;
+  color: #ffffff;
   position: absolute;
   top: -50px !important;
   right: 10px !important;
@@ -413,7 +426,7 @@ select:focus {
 }
 .gform_wrapper .gform_page_footer input.button {
   background: #2A3A42;
-  color: #fff;
+  color: #ffffff;
   position: absolute;
   top: -50px !important;
   right: 10px !important;
@@ -422,7 +435,7 @@ select:focus {
 }
 .gform_wrapper .gform_page_footer input[type=submit] {
   background: #2A3A42;
-  color: #fff;
+  color: #ffffff;
   position: absolute;
   top: -50px !important;
   right: 10px !important;
@@ -430,29 +443,29 @@ select:focus {
   font-size: 25px !important;
 }
 .gform_wrapper div.validation_error {
-  color: #fff !important;
-  border-top: 1px solid #fff !important;
-  border-bottom: 1px solid #fff !important;
+  color: #ffffff !important;
+  border-top: 1px solid #ffffff !important;
+  border-bottom: 1px solid #ffffff !important;
 }
 .gform_wrapper .validation_message {
-  color: #fff !important;
+  color: #ffffff !important;
 }
 #gform_wrapper_1 .gform_fields .gfield input::-webkit-input-placeholder {
-  color: #fff;
+  color: #ffffff;
 }
 #gform_wrapper_1 .gform_fields .gfield input::-moz-placeholder {
-  color: #fff;
+  color: #ffffff;
 }
 #gform_wrapper_1 .gform_fields .gfield input:-ms-input-placeholder {
-  color: #fff;
+  color: #ffffff;
 }
 #gform_wrapper_1 .gform_fields .gfield input:-moz-placeholder {
-  color: #fff;
+  color: #ffffff;
 }
 #input_1_1 {
   background: #2A3A42 !important;
   opacity: 0.95;
-  color: #fff;
+  color: #ffffff;
   border: none !important;
   padding-left: 50px !important;
 }
@@ -472,7 +485,7 @@ select:focus {
 }
 .site-footer {
   background: url("../assets/SP_Pattern_Blue.png") 0% 0% repeat;
-  color: #fff;
+  color: #ffffff;
   font-family: 'arsenal', sans-serif;
   font-size: 12px;
   text-align: center;
@@ -481,6 +494,195 @@ select:focus {
   background: #2A3A42;
   padding: 15px;
   letter-spacing: 1.8px;
+}
+/* *******MEDIA QUERIES ******** */
+@media (max-width: 1200px) {
+  .logo {
+    width: 235px;
+    padding: 20px 10px;
+  }
+  .menu {
+    font-size: 16px;
+  }
+}
+@media (max-width: 1024px) {
+  .container {
+    margin-top: 22px;
+  }
+  .header-inner {
+    display: block;
+  }
+  #site-navigation {
+    display: none;
+  }
+  .mobile-nav {
+    display: block;
+  }
+  .social-primary {
+    display: none;
+  }
+  .menu-primary-container .menu {
+    display: flex;
+    justify-content: center;
+  }
+  #primary-menu .menu-item {
+    border: none;
+  }
+  .hero-text {
+    padding: 220px 30px 0;
+  }
+  .columns-3 {
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 50px;
+    padding: 10px 30px;
+  }
+  .about-container {
+    padding: 50px 0;
+  }
+}
+@media (max-width: 768px) {
+  h1 {
+    font-size: 75px;
+  }
+  #primary-menu .menu-item {
+    padding: 0 10px;
+  }
+  .hero-text {
+    padding: 260px 30px 0;
+  }
+  .columns-3 {
+    display: initial;
+  }
+  .column {
+    padding: 0 2em;
+  }
+  .team-row {
+    display: initial;
+  }
+  .team-bg {
+    width: initial;
+  }
+  .headshot {
+    margin: 0;
+  }
+  .team-info div {
+    /* float: right; */
+    padding: 20px 90px;
+  }
+  .team-info div p img {
+    width: 130px;
+  }
+  .team-content {
+    margin: 50px;
+  }
+  .accordion {
+    width: 100%;
+  }
+  #practice-areas {
+    padding: 50px 30px;
+  }
+  .cases-inner {
+    display: initial;
+    text-align: center;
+    padding: 50px;
+    grid-column-gap: 30px;
+  }
+  .cases-title {
+    border: none;
+  }
+  .slider-buttons {
+    padding: 15px;
+  }
+  .cases-text {
+    padding: 0 30px;
+  }
+  .email-form {
+    padding-top: 50px;
+  }
+  .contact-inner {
+    display: initial;
+  }
+  .contact-text {
+    text-align: center;
+    padding: 20px 0;
+    border: none;
+  }
+  .menu {
+    justify-content: center;
+  }
+}
+@media only screen and (max-width: 641px) {
+  .gform_wrapper .gform_footer input.button,
+  .gform_wrapper .gform_footer input[type=submit],
+  .gform_wrapper .gform_page_footer input.button,
+  .gform_wrapper .gform_page_footer input[type=submit] {
+    width: auto !important;
+  }
+  .gform_wrapper .gform_footer input.button,
+  .gform_wrapper .gform_footer input[type=submit],
+  .gform_wrapper .gform_page_footer input.button,
+  .gform_wrapper .gform_page_footer input[type=submit] {
+    background: #2A3A42;
+    color: #fff;
+    position: absolute;
+    top: -64px !important;
+    right: 10px !important;
+    border: none !important;
+    font-size: 22px !important;
+  }
+  .gform_fields li.email .ginput_container i {
+    bottom: 18px;
+  }
+}
+@media (max-width: 480px) {
+  body {
+    font-size: 15px;
+  }
+  .menu-primary-container .menu {
+    display: initial;
+    text-align: center;
+    font-size: 13px;
+  }
+  .menu-social-container .menu {
+    display: flex;
+    justify-content: center;
+  }
+  #hero {
+    height: 800px;
+  }
+  .hero-text {
+    padding: 250px 30px 0;
+  }
+  .hero-text p {
+    font-size: 13px;
+  }
+  .line {
+    height: 60px;
+  }
+  h1 {
+    font-size: 50px;
+  }
+  h2 {
+    font-size: 40px;
+  }
+  h3 {
+    font-size: 30px;
+  }
+  .team-content {
+    margin: 20px;
+  }
+  .accordion {
+    font-size: 16px;
+  }
+  .footer-logo {
+    max-width: 248px;
+  }
+  .email-form h4 {
+    font-size: 20px;
+  }
+  .gform_wrapper form {
+    max-width: 320px !important;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
