--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,13 @@ h3 {
   font-size: 36px;
   margin: 0;
 }
+h4 {
+  font-family: 'arsenal', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.2;
+  margin: 0;
+}
 .red {
   color: #7C1A16;
 }
@@ -130,6 +137,11 @@ h3 {
   text-transform: uppercase;
   border-right: 1px solid #AFABA3;
 }
+#primary-menu .menu-item:hover {
+  color: #AFABA3;
+  transition-duration: 0.2s;
+  cursor: pointer;
+}
 #primary-menu .social-primary {
   border: none !important;
   padding: 0 5px !important;
@@ -137,6 +149,11 @@ h3 {
 #social .menu-item {
   padding-right: 12px;
   color: #ffffff;
+}
+#social .menu-item:hover {
+  color: #AFABA3;
+  transition-duration: 0.2s;
+  cursor: pointer;
 }
 #menu-item-89,
 #menu-item-110 {
@@ -283,7 +300,7 @@ h3 {
   padding: 15px;
   width: 90%;
   border-top: none;
-  border-bottom: 2px solid #cfcdc8;
+  border-bottom: 1px solid #cfcdc8;
   border-right: none;
   border-left: none;
   text-align: left;
@@ -296,14 +313,11 @@ h3 {
   position: absolute;
   top: 20px;
   right: 20px;
-  transition: all 500ms;
-}
-.first {
-  border-top: 2px solid #cfcdc8;
+  transition: all 600ms;
 }
 .active {
-  border-top: 1px solid #cfcdc8;
-  border-bottom: none;
+  background: #F2F1F0;
+  border: none;
 }
 .active i {
   transform: rotate(45deg);
@@ -320,38 +334,97 @@ h3 {
   text-align: center;
   background: url("../assets/SP_Pattern_LightTan.png") 0% 0% repeat;
   padding: 80px 0;
+  position: relative;
+}
+#practice-areas p {
+  margin-bottom: 30px;
 }
 ::marker {
   font-size: 25px;
 }
+.areas-slider {
+  width: 100%;
+  padding: 30px 0;
+  z-index: 5;
+  margin-top: 20px;
+}
+.white-box {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 300px;
+  background: url("../assets/white-box.png") no-repeat center center;
+}
+.practice-icon img {
+  display: none !important;
+  width: 58px;
+  margin: 0 auto;
+}
+.icon-tan img {
+  width: 58px;
+  margin: 0 auto;
+}
+.slider-item {
+  text-align: center;
+  max-width: 250px;
+  margin: 0 2em;
+}
+.slick-current {
+  transition-duration: 0.9s;
+}
+.slick-current h4 {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1.2;
+}
+.slick-current .practice-icon img {
+  width: 88px;
+  display: block !important;
+}
+.slick-current .icon-tan {
+  display: none;
+}
+.area-title {
+  max-width: 280px;
+}
 /* Cases slider styles */
+#cases {
+  position: relative;
+}
 .cases-inner {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-row-gap: 10px;
-  grid-column-gap: 100px;
   max-width: 1380px;
   margin-left: auto;
   margin-right: auto;
-  padding: 90px 0;
+  padding: 90px;
 }
 .cases-title {
-  border-right: 2px solid #cfcdc8;
-  padding: 0 50px;
-  align-items: top;
+  text-align: center;
+  font-style: italic;
+  position: relative;
+  margin: 0 auto;
+  padding-bottom: 20px;
+  line-height: 1.2;
 }
-.slider-buttons {
-  padding-top: 30px;
+.cases-text {
+  padding: 20px 60px;
+  text-align: center;
 }
-.slider-buttons button {
-  margin-right: 15px;
+.cases-text p {
+  margin: 0;
+}
+.cases-arrow {
+  z-index: 50;
+  position: absolute;
+  right: 50%;
+  bottom: 40px;
   background: #F2F1F0;
-  border: none;
   width: 44px;
   height: 44px;
+  padding: 10px 10px 10px 14px;
 }
-.slider-buttons button i {
-  margin-top: 5px;
+.arrow-right {
+  left: 51%;
+  bottom: 40px;
 }
 /* Footer styles */
 .contact-inner {
@@ -483,6 +556,9 @@ select:focus {
   padding-top: 20px;
   padding-left: 50px;
 }
+.contact-text p {
+  line-height: 1.3;
+}
 .site-footer {
   background: url("../assets/SP_Pattern_Blue.png") 0% 0% repeat;
   color: #ffffff;
@@ -494,6 +570,11 @@ select:focus {
   background: #2A3A42;
   padding: 15px;
   letter-spacing: 1.8px;
+}
+.disclaimer {
+  max-width: 600px;
+  padding-top: 15px;
+  margin: 0 auto;
 }
 /* *******MEDIA QUERIES ******** */
 @media (max-width: 1200px) {
@@ -539,6 +620,24 @@ select:focus {
   .about-container {
     padding: 50px 0;
   }
+  .cases-title,
+  .cases-text {
+    max-width: 100%;
+    float: none;
+    border: none;
+  }
+  .practice-icon img {
+    width: 60px;
+  }
+  .cases-title {
+    padding: 10px 80px 30px;
+  }
+  .cases-text {
+    padding: 10px 80px;
+  }
+  .cases-arrow {
+    bottom: 40px;
+  }
 }
 @media (max-width: 768px) {
   h1 {
@@ -583,7 +682,6 @@ select:focus {
   }
   .cases-inner {
     display: initial;
-    text-align: center;
     padding: 50px;
     grid-column-gap: 30px;
   }
@@ -593,8 +691,17 @@ select:focus {
   .slider-buttons {
     padding: 15px;
   }
+  .cases-inner {
+    padding: 3em 3em 5em 3em;
+  }
+  .cases-arrow {
+    bottom: 20px;
+  }
   .cases-text {
-    padding: 0 30px;
+    padding: 0 30px 0 80px;
+  }
+  .arrow-right {
+    left: 110px;
   }
   .email-form {
     padding-top: 50px;
